--- a/index.html
+++ b/index.html
@@ -37,30 +37,28 @@
         </td>
       </tr>
     </table>
-        <div>
-          <text style="display:none" id="st3"></text>
-        </div>
-        <svg id="graph" viewBox="0 0 900 500" width="100%" height="100%" style="display:none">
-          <defs>
-            <linearGradient id="gradient" x1="0%" x2="100%">
-              <stop  offset="0.0%" stop-color="#ffffff"></stop>
-              <stop  offset="100.0%" stop-color="#045a8d"></stop>
-            </linearGradient>
-          </defs>
-        </svg>        
-    <button class="restartButton hidden" style="display:none">Restart</button>
-    <input class="percentage hidden" type="range" style="display:none" min="95" max="100" step="0.001" value="98.500">
-    <text class="percentageValue hidden" style="display: none">0%</text>
-    <text class="featureCount hidden" style="display:none">0</text>
-    <text class="featureSigma hidden" style="display:none">0</text>    
+    <div>
+      <text style="display:none" id="st3"></text>
+    </div>
+    <svg id="graph" viewBox="0 0 900 500" width="100%" height="100%" style="display:none">
+      <defs>
+        <linearGradient id="gradient" x1="0%" x2="100%">
+          <stop  offset="0.0%" stop-color="#ffffff"></stop>
+          <stop  offset="100.0%" stop-color="#045a8d"></stop>
+        </linearGradient>
+      </defs>
+    </svg>
+    <button class="restartButton movedown hidden" style="display:none">Restart</button>
+    <input class="percentage movedown hidden" type="range" style="display:none" min="95" max="100" step="0.001" value="98.500">
+    <text class="percentageValue movedown hidden" style="display: none">0%</text>
+    <text class="featureCount movedown hidden" style="display:none">0</text>
+    <text class="featureSigma movedown hidden" style="display:none">0</text>
     <script src="./js/d3/d3.min.js"></script>
     <script src="./js/numeric-1.2.6.js"></script>
     <script src="./js/draw.js"></script>
     <script src="./js/getData.js"></script>
   </body>
   <script>
-    //d3.select("#facesFiles").on("change", readTextFile);
-    
     var inputFile = document.getElementById("facesFile");
     inputFile.onchange = readTextFile;
   </script>
