--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </linearGradient>
       </defs>
     </svg>
-    <button class="restartButton movedown hidden" style="display:none">Restart</button>
+    <button class="restoreButton movedown hidden" style="display:none">Restore</button>
     <button class="viewButton movedown hidden" style="display:none">View</button>
     <button class="saveButton movedown hidden" style="display:none">Save</button>
-    <input class="percentage movedown hidden" type="range" style="display:none" min="95" max="100" step="0.001" value="98.500">
+    <input class="percentage movedown hidden" type="range" style="display:none" min="85" max="100" step="0.001" value="98.500">
     <text class="percentageValue movedown hidden" style="display: none">0%</text>
     <text class="featureCount movedown hidden" style="display:none">0</text>
     <text class="featureSigma movedown hidden" style="display:none">0</text>
