--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </defs>
     </svg>
     <button class="restoreButton movedown hidden" style="display:none">Restore</button>
-    <button class="viewButton movedown hidden" style="display:none">View</button>
+    <!-- <button class="viewButton movedown hidden" style="display:none">View</button> -->
     <button class="saveButton movedown hidden" style="display:none">Save</button>
     <input class="percentage movedown hidden" type="range" style="display:none" min="85" max="100" step="0.001" value="98.500">
     <text class="percentageValue movedown hidden" style="display: none">0%</text>
