--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
     <title>PCA Explorer</title>
   </head>
   <body>
     <div>
       <label for="file">Select image file</label>
-      <input name="facesData" id="facesFile" type="file" class="inputButtons">
+      <input name="facesData" id="facesFile" type="file" accept=".dat" class="inputButtons">
     </div>
     <table>
       <tr>
@@ -49,7 +48,6 @@
       </defs>
     </svg>
     <button class="restoreButton movedown hidden" style="display:none">Restore</button>
-    <!-- <button class="viewButton movedown hidden" style="display:none">View</button> -->
     <button class="saveButton movedown hidden" style="display:none">Save</button>
     <input class="percentage movedown hidden" type="range" style="display:none" min="85" max="100" step="0.001" value="98.500">
     <text class="percentageValue movedown hidden" style="display: none">0%</text>
