Prevent cpaint to be called with the same # of features Calculates projected images as a variable Preparation for GPU code

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
     <text class="percentageValue movedown hidden" style="display: none">0%</text>
     <text class="featureCount movedown hidden" style="display:none">0</text>
     <text class="featureSigma movedown hidden" style="display:none">0</text>
+    <script src="./js/turbojs/turbo.js"></script>
+    <script src="./js/gpujs/gpu.min.js"></script>
     <script src="./js/d3/d3.min.js"></script>
-    <script src="./js/numeric-1.2.6.js"></script>
+    <script src="./js/numeric/numeric-1.2.6.js"></script>
     <script src="./js/draw.js"></script>
     <script src="./js/getData.js"></script>
   </body>
