--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <text class="featureCount movedown hidden" style="display:none">0</text>
     <text class="featureSigma movedown hidden" style="display:none">0</text>
     <script src="./js/turbojs/turbo.js"></script>
-    <script src="./js/gpujs/gpu.min.js"></script>
+    <script src="./js/gpujs/gpu.js"></script>
     <script src="./js/d3/d3.min.js"></script>
     <script src="./js/numeric/numeric-1.2.6.js"></script>
     <script src="./js/draw.js"></script>
