Reference to eigenimages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div>
             <text style="display:none" id="st4"></text>
           </div>
-          <canvas id="eigenVectors" width="0" height="0"></canvas>
+          <canvas id="eigenImages" width="0" height="0"></canvas>
         </td>
       </tr>
       <tr>
